Create scrolling menu structure

--- a/ussak.kyriakoskatzourakis.gr/index.html
+++ b/ussak.kyriakoskatzourakis.gr/index.html
@@ -23,10 +23,10 @@
 
 					<!-- Logo -->
 						<div id="logo">
-							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
+							<!--<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>-->
 							<h1 id="title">USSAK</h1>
-							<p>Help us realize the film</p>
-							<p>Υποστηρίξτε το σκοπό μας</p>
+							<p>Σε μια χώρα που πάσχει, κάπου στο μέλλον, πρόσωπα βυθισμένα  σε απάθεια  και ψευδαισθήσεις, μέσα από συναντήσεις και άγριες συγκρούσεις, αφυπνίζονται και διεκδικούν 
+                                μιαν άλλη ζωή</p>
 						</div>
 
 					<!-- Nav -->
@@ -45,10 +45,14 @@
 
 							-->
 							<ul>
-								<li><a href="#top" id="top-link" class="skel-layers-ignoreHref"><span class="icon fa-home">Intro</span></a></li>
-								<li><a href="#portfolio" id="portfolio-link" class="skel-layers-ignoreHref"><span class="icon fa-th">Portfolio</span></a></li>
-								<li><a href="#about" id="about-link" class="skel-layers-ignoreHref"><span class="icon fa-user">About Me</span></a></li>
-								<li><a href="#contact" id="contact-link" class="skel-layers-ignoreHref"><span class="icon fa-envelope">Contact</span></a></li>
+								<li><a href="#intro" id="intro-link" class="skel-layers-ignoreHref"><span class="icon fa-home">Intro</span></a></li>
+								<li><a href="#goal" id="goal-link" class="skel-layers-ignoreHref"><span class="icon fa-rocket">Our goal</span></a></li>
+								<li><a href="#script" id="script-link" class="skel-layers-ignoreHref"><span class="icon fa-book">The script</span></a></li>
+								<!--<li><a href="#making" id="making-link" class="skel-layers-ignoreHref"><span class="icon fa-film">Making the film</span></a></li>-->
+								<li><a href="#making" id="making-link" class="skel-layers-ignoreHref"><span class="icon fa-gears">Making the film</span></a></li>
+								<!--<li><a href="#support" id="suport-link" class="skel-layers-ignoreHref"><span class="icon fa-key">How you can help</span></a></li>-->
+								<li><a href="#support" id="suport-link" class="skel-layers-ignoreHref"><span class="icon fa-money">How you can help</span></a></li>
+								<!--<li><a href="#support" id="suport-link" class="skel-layers-ignoreHref"><span class="icon fa-child">How you can help</span></a></li>-->
 							</ul>
 						</nav>
 
@@ -58,11 +62,9 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="https://twitter.com/kkatzourakis" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="https://www.facebook.com/ussakfilm" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="mailto:ussak@kyriakoskatzourakis.gr" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
 				</div>
@@ -76,26 +78,26 @@
 					<section id="top" class="one dark cover">
 						<div class="container">
 
-							<header>
+							<!--<header>
 								<h2 class="alt">Hi! I'm <strong>Prologue</strong>, a <a href="http://html5up.net/license">free</a> responsive<br />
 								site template designed by <a href="http://html5up.net">HTML5 UP</a>.</h2>
 								<p>Ligula scelerisque justo sem accumsan diam quis<br />
 								vitae natoque dictum sollicitudin elementum.</p>
-							</header>
+							</header>-->
 
 							<footer>
-								<a href="#portfolio" class="button scrolly">Magna Aliquam</a>
+								<a href="#intro" class="button scrolly">Magna Aliquam</a>
 							</footer>
 
 						</div>
 					</section>
 
-				<!-- Portfolio -->
-					<section id="portfolio" class="two">
+				<!-- Intro -->
+					<section id="intro" class="two">
 						<div class="container">
 
 							<header>
-								<h2>Portfolio</h2>
+								<h2>Overview</h2>
 							</header>
 
 							<p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
@@ -151,12 +153,12 @@
 						</div>
 					</section>
 
-				<!-- About Me -->
-					<section id="about" class="three">
+				<!-- Our goal -->
+					<section id="goal" class="three">
 						<div class="container">
 
 							<header>
-								<h2>About Me</h2>
+								<h2>Our goal</h2>
 							</header>
 
 							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
@@ -171,12 +173,12 @@
 						</div>
 					</section>
 
-				<!-- Contact -->
-					<section id="contact" class="four">
+				<!-- The Script -->
+					<section id="script" class="four">
 						<div class="container">
 
 							<header>
-								<h2>Contact</h2>
+								<h2>The script</h2>
 							</header>
 
 							<p>Elementum sem parturient nulla quam placerat viverra
@@ -184,7 +186,23 @@
 							donec curae mus. Eleifend id porttitor ac ultricies lobortis sem nunc
 							orci ridiculus faucibus a consectetur. Porttitor curae mauris urna mi dolor.</p>
 
-							<form method="post" action="#">
+						</div>
+					</section>
+                    
+                    <!-- The Making the film -->
+					<section id="making" class="four">
+						<div class="container">
+
+							<header>
+								<h2>Making the film</h2>
+							</header>
+
+							<p>Elementum sem parturient nulla quam placerat viverra
+							mauris non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia
+							donec curae mus. Eleifend id porttitor ac ultricies lobortis sem nunc
+							orci ridiculus faucibus a consectetur. Porttitor curae mauris urna mi dolor.</p>
+
+							<!--<form method="post" action="#">
 								<div class="row">
 									<div class="6u 12u$(mobile)"><input type="text" name="name" placeholder="Name" /></div>
 									<div class="6u$ 12u$(mobile)"><input type="text" name="email" placeholder="Email" /></div>
@@ -195,7 +213,23 @@
 										<input type="submit" value="Send Message" />
 									</div>
 								</div>
-							</form>
+							</form>-->
+
+						</div>
+					</section>
+
+				<!-- How you can help -->
+					<section id="support" class="four">
+						<div class="container">
+
+							<header>
+								<h2>How you can help</h2>
+							</header>
+
+							<p>Elementum sem parturient nulla quam placerat viverra
+							mauris non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia
+							donec curae mus. Eleifend id porttitor ac ultricies lobortis sem nunc
+							orci ridiculus faucibus a consectetur. Porttitor curae mauris urna mi dolor.</p>
 
 						</div>
 					</section>
