Add banners, include my.css

--- a/ussak.kyriakoskatzourakis.gr/index.html
+++ b/ussak.kyriakoskatzourakis.gr/index.html
@@ -11,6 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/my.css" />
 		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 	</head>
@@ -86,7 +87,7 @@
 							</header>-->
 
 							<footer>
-								<a href="#intro" class="button scrolly">Magna Aliquam</a>
+								<!--<a href="#intro" class="button scrolly">lalala;</a>-->
 							</footer>
 
 						</div>
