--- a/ussak.kyriakoskatzourakis.gr/index.html
+++ b/ussak.kyriakoskatzourakis.gr/index.html
@@ -6,9 +6,10 @@
 -->
 <html>
 	<head>
-		<title>Prologue by HTML5 UP</title>
+		<title>USSAK, μια ταινία του Κυριάκου Κατζουράκη</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+        <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<link rel="stylesheet" href="assets/css/my.css" />
@@ -45,13 +46,13 @@
 
 							-->
 							<ul>
-								<li><a href="#intro" id="intro-link" class="skel-layers-ignoreHref"><span class="icon fa-home">Intro</span></a></li>
-								<li><a href="#goal" id="goal-link" class="skel-layers-ignoreHref"><span class="icon fa-rocket">Our goal</span></a></li>
-								<li><a href="#script" id="script-link" class="skel-layers-ignoreHref"><span class="icon fa-book">The script</span></a></li>
+								<li><a href="#intro" id="intro-link" class="skel-layers-ignoreHref"><span class="icon fa-home">Εισαγωγή</span></a></li>
+								<li><a href="#goal" id="goal-link" class="skel-layers-ignoreHref"><span class="icon fa-rocket">Ο στόχος μας</span></a></li>
+								<li><a href="#script" id="script-link" class="skel-layers-ignoreHref"><span class="icon fa-book">Το σενάριο</span></a></li>
 								<!--<li><a href="#making" id="making-link" class="skel-layers-ignoreHref"><span class="icon fa-film">Making the film</span></a></li>-->
-								<li><a href="#making" id="making-link" class="skel-layers-ignoreHref"><span class="icon fa-gears">Making the film</span></a></li>
+								<li><a href="#making" id="making-link" class="skel-layers-ignoreHref"><span class="icon fa-gears">Κάνοντας την ταινία</span></a></li>
 								<!--<li><a href="#support" id="suport-link" class="skel-layers-ignoreHref"><span class="icon fa-key">How you can help</span></a></li>-->
-								<li><a href="#support" id="suport-link" class="skel-layers-ignoreHref"><span class="icon fa-money">How you can help</span></a></li>
+								<li><a href="#support" id="suport-link" class="skel-layers-ignoreHref"><span class="icon fa-money">Πως να βοηθήσετε</span></a></li>
 								<!--<li><a href="#support" id="suport-link" class="skel-layers-ignoreHref"><span class="icon fa-child">How you can help</span></a></li>-->
 							</ul>
 						</nav>
