Remove Mahi contact info

--- a/ussak.kyriakoskatzourakis.gr/index.html
+++ b/ussak.kyriakoskatzourakis.gr/index.html
@@ -215,8 +215,8 @@ frameborder="0" allowfullscreen></iframe>
 
     <blockquote class="donate-container">
 <pre>
-ΜΑΧΗ ΑΡΒΑΝΙΤΗ  τηλ. 6977564195
-Συνεταιρισμός Τεχνικών Κινηματογράφου και Τηλεόρασης "ARTemis"
+<a href="http://artemisproductions.gr">ARTemis Productions</a>
+<a href="info@artemisproductions.gr">info@artemisproductions.gr</a> 
 ΤΡΑΠΕΖΑ ΠΕΙΡΑΙΩΣ 
 IBAN:
 GR86 0171 7390 0067 3913 7942 248
