Add campaign status and contribute button

--- a/ussak.kyriakoskatzourakis.gr/index.html
+++ b/ussak.kyriakoskatzourakis.gr/index.html
@@ -69,7 +69,9 @@
                     <li><a href="#support" id="suport-link" class="skel-layers-ignoreHref"><span class="icon fa-money">Πως να βοηθήσετε</span></a></li>
                     <!--<li><a href="#support" id="suport-link" class="skel-layers-ignoreHref"><span class="icon fa-child">How you can help</span></a></li>-->
                 </ul>
+
             </nav>
+
 
             <!--<div id="lang">
                 <ul>
@@ -77,17 +79,34 @@
                     <li><a href="index.el.html">English</a></li>
                 </ul>
             </div>-->
-
-
         </div>
+
 
         <div class="bottom">
 
+            <div id="i-project-nutshell">
+                <h2>Campaign status</h2>
+                <p class="i-balance"><span class="currency currency-xlarge"><span>&euro;29,812</span><em>EUR</em></span>
+                </p>
+
+                <p class="i-campaign-summary-line">
+                    119% of <span class="currency"><span>$25,000</span></span>
+                </p>
+
+                <p class="i-campaign-summary-line">
+                    392 δωρητές, <em>24</em>&nbsp;days&nbsp;left
+                </p>
+                
+                <a href="#support" title="Υποστηρίξτε οικονομικά την ταινία USSAK" class="button button-small skel-layers-ignoreHref">Contribute</a>
+
+            </div>
+
+
             <!-- Social Icons -->
             <ul class="icons">
-                <li><a href="https://twitter.com/kkatzourakis" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-                <li><a href="https://www.facebook.com/ussakfilm" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-                <li><a href="mailto:ussak@kyriakoskatzourakis.gr" target="_blank" class="icon fa-envelope"><span class="label">Email</span></a></li>
+                <li><a href="https://twitter.com/kkatzourakis" title="Find us on twitter" target="_blank" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+                <li><a href="https://www.facebook.com/ussakfilm" title="Follow our Facebook page for frequent updates" target="_blank" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+                <li><a href="mailto:ussak@kyriakoskatzourakis.gr" title="Send us an email" target="_blank" class="icon fa-envelope"><span class="label">Email</span></a></li>
             </ul>
 
         </div>
@@ -136,7 +155,7 @@
                 <p>Σε μια χώρα που πάσχει, κάπου στο μέλλον, πρόσωπα βυθισμένα σε απάθεια και ψευδαισθήσεις, μέσα από συναντήσεις
                     και άγριες συγκρούσεις, αφυπνίζονται και διεκδικούν μιαν άλλη ζωή.</p>
                 <div class="video-container">
-                    <iframe width="560" height="315" src="https://www.youtube.com/watch?v=Ff4dnZ-ZU-E" frameborder="0" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Kw685LQ-fhs" frameborder="0" allowfullscreen></iframe>
                 </div>
             </div>
         </section>
