Add links to KK and KG, reset campaign numbers

--- a/ussak.kyriakoskatzourakis.gr/index.html
+++ b/ussak.kyriakoskatzourakis.gr/index.html
@@ -87,15 +87,16 @@
 
             <div id="i-project-nutshell">
                 <h2>Καμπάνια υποστήριξης</h2>
-                <p class="i-balance"><span class="currency currency-xlarge"><span>&euro;29,812</span><em>EUR</em></span>
+                <p class="i-balance"><span class="currency currency-xlarge">
+                    <span>&euro;0</span><em>&nbsp; EUR</em></span>
                 </p>
 
                 <p class="i-campaign-summary-line">
-                    119% of <span class="currency"><span>$25,000</span></span>
+                    0% από <span class="currency"><span>&euro;70,000</span></span>
                 </p>
 
                 <p class="i-campaign-summary-line">
-                    392 δωρητές, <em>24</em>&nbsp;days&nbsp;left
+                    0 δωρητές, απομένουν<span>&nbsp;60&nbsp;</span>ημέρες
                 </p>
                 
                 <a id="support-link-2" href="#support" title="Υποστηρίξτε οικονομικά την ταινία USSAK" class="button button-small scrolly skel-layers-ignoreHref">Contribute</a>
@@ -169,7 +170,7 @@
                     <h2>Κάνοντας την ταινία</h2>
                 </header>
 
-                <p>Ο Κυριάκος Κατζουράκης έχει ζωγραφίσει όλες τις σκηνές του USSAK, φτιάχνοντας ένα ιδιόμορφο storyboard, το
+                <p><a href="https://geroukatzourakis.wordpress.com/%ce%b5%ce%bb-2/%ce%ba%cf%85%cf%81%ce%b9%ce%ac%ce%ba%ce%bf%cf%82-%ce%ba%ce%b1%cf%84%ce%b6%ce%bf%cf%85%cf%81%ce%ac%ce%ba%ce%b7%cf%82/" target="_blank">Ο Κυριάκος Κατζουράκης</a>  έχει ζωγραφίσει όλες τις σκηνές του USSAK, φτιάχνοντας ένα ιδιόμορφο storyboard, το
                     οποίο από μόνο του στέκεται σαν ολοκληρωμένο έργο.
                 </p>
 <p>Το "ζωγράφισμα" της ταινίας δεν εμποδίζει την φαντασία των συντελεστών, αντίθετα τροφοδοτεί τον δημιουργικό διάλογο μεταξύ τους.</p>
@@ -201,7 +202,8 @@
                     <h2>Το σενάριο</h2>
                 </header>
                 <p><img src="images/ussak-smoke.jpg" width="100%" alt=""></p>
-                <p>Πριν από τέσσερα χρόνια ο Κυριάκος Κατζουράκης με την Κάτια Γέρου άρχισαν να γράφουν το σενάριο του USSAK
+                <p>Πριν από τέσσερα χρόνια ο <a href="https://geroukatzourakis.wordpress.com/%ce%b5%ce%bb-2/%ce%ba%cf%85%cf%81%ce%b9%ce%ac%ce%ba%ce%bf%cf%82-%ce%ba%ce%b1%cf%84%ce%b6%ce%bf%cf%85%cf%81%ce%ac%ce%ba%ce%b7%cf%82/" target="_blank">Κυριάκος Κατζουράκης</a> 
+                με την <a href="https://geroukatzourakis.wordpress.com/%ce%b5%ce%bb-2/%ce%ba%ce%ac%cf%84%ce%b9%ce%b1-%ce%b3%ce%ad%cf%81%ce%bf%cf%85/" target="_blank">Κάτια Γέρου</a>  άρχισαν να γράφουν το σενάριο του USSAK
                     εν μέσω της αναταραχής στη χώρα.</p>
                 <p>Σε μια χώρα που πάσχει, κάπου στο μέλλον, πρόσωπα βυθισμένα σε απάθεια και ψευδαισθήσεις, μέσα από συναντήσεις
                     και άγριες συγκρούσεις, αφυπνίζονται και διεκδικούν μιαν άλλη ζωή.</p>
@@ -220,16 +222,16 @@
 
 <h3 id="ussak---ηθοποιοι">USSAK - ΗΘΟΠΟΙΟΙ </h3>
 <ul>
-<li>ΤΣΙΧΛΑΣ - Θάνος Αλεξίου,</li>
-<li>ΙΩΑΝΝΑ - Κάτια Γέρου,</li>
+<li>ΤΣΙΧΛΑΣ - Θάνος Αλεξίου</li>
+<li>ΙΩΑΝΝΑ - <a href="https://geroukatzourakis.wordpress.com/%ce%b5%ce%bb-2/%ce%ba%ce%ac%cf%84%ce%b9%ce%b1-%ce%b3%ce%ad%cf%81%ce%bf%cf%85/" target="_blank">Κάτια Γέρου</a></li>
 <li>ΜΑΡΙΑ - Ιωάννα Μαυρομάτη</li>
-<li>ΝΤΑΦΤΗΣ - Καμίλο Μπετανκούρ,</li>
-<li>ΦΡΕΝΤΥ - Νίκος Νίκας,</li>
-<li>ΠΑΝΟΣ - Δημήτρης Πολύτιμος,</li>
-<li>ΣΩΚΡΑΤΗΣ - Δημήτρης Πουλικάκος,</li>
-<li>ΜΑΡΘΑ - Θεοδώρα Τζίμου,</li>
-<li>ΖΑΦΟΣ - Γιάννης Τσορτέκης,</li>
-<li>ADRIAN - Άντριαν Φρίλινγκ,</li>
+<li>ΝΤΑΦΤΗΣ - Καμίλο Μπετανκούρ</li>
+<li>ΦΡΕΝΤΥ - Νίκος Νίκας</li>
+<li>ΠΑΝΟΣ - Δημήτρης Πολύτιμος</li>
+<li>ΣΩΚΡΑΤΗΣ - Δημήτρης Πουλικάκος</li>
+<li>ΜΑΡΘΑ - Θεοδώρα Τζίμου</li>
+<li>ΖΑΦΟΣ - Γιάννης Τσορτέκης</li>
+<li>ADRIAN - Άντριαν Φρίλινγκ</li>
 <li>ΔΗΜΟΣΙΟΓΡΑΦΟΣ Α - Θανάσης Παπαγεωργίου</li>
 <li>ΔΗΜΟΣΙΟΓΡΑΦΟΣ Β - Ρήγας Αξελός</li>
 <li>ΔΗΜΟΣΙΟΓΡΑΦΟΣ Γ - Γιάγκος Ανδρεάδης</li>
@@ -245,7 +247,7 @@
 <h3 id="ussak---συντελεστεσ">USSAK - ΣΥΝΤΕΛΕΣΤΕΣ</h3>
 <ul>
 <li>ΠΑΡΑΓΩΓΗ - ARTemis PRODUCTIONS</li>
-<li>ΣΚΗΝΟΘΕΣΙΑ - Κυριάκος Κατζουράκης</li>
+<li>ΣΚΗΝΟΘΕΣΙΑ - <a href="https://geroukatzourakis.wordpress.com/%ce%b5%ce%bb-2/%ce%ba%cf%85%cf%81%ce%b9%ce%ac%ce%ba%ce%bf%cf%82-%ce%ba%ce%b1%cf%84%ce%b6%ce%bf%cf%85%cf%81%ce%ac%ce%ba%ce%b7%cf%82/" target="_blank">Κυριάκος Κατζουράκης</a></li>
 <li>ΣΕΝΑΡΙΟ - Κάτια Γέρου, Κυριάκος Κατζουράκης</li>
 <li>ΔΙΕΥΘ.ΠΑΡΑΓΩΓΗΣ - Γιώργος Παπαδάτος</li>
 <li>ΕΚΤ.ΠΑΡΑΓΩΓΗΣ - Μάχη Αρβανίτη</li>
@@ -295,10 +297,10 @@
 
                 <!--<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>-->
 
-                <p>Ο προϋπολογισμός της ταινίας είναι 270.000 ευρώ. Το USSAK έχει την στήριξη του <a href="http://www.gfc.gr/"
-                    target="_blank">Ελληνικόυ Κέντρου Κινηματογράφου</a> με το ποσό των 90.000 ευρώ. Ένα μέρος καλύπτεται
+                <p>Ο προϋπολογισμός της ταινίας είναι <em>&euro;270.000 ευρώ</em>. Το USSAK έχει την στήριξη του <a href="http://www.gfc.gr/"
+                    target="_blank">Ελληνικόυ Κέντρου Κινηματογράφου</a> με το ποσό των <em>&euro;270.000 ευρώ</em>. Ένα μέρος καλύπτεται
                     από κεφαλαιοποιήσεις αμοιβών (σενάριο, σκηνοθεσία κ.λπ.), παροχές φορέων, Δήμων και ιδιωτών.
-                    <p>Υπολείπεται όμως ένα ποσό της τάξης των <strong>80.000 ευρώ</strong>.</p>
+                    <p>Υπολείπεται όμως ένα ποσό της τάξης των <em>&euro;70.000 ευρώ</em>.</p>
             </div>
         </section>
 
@@ -333,8 +335,9 @@ SWIFT-BIC: PIRBGRAA
 
         <!-- Copyright -->
         <ul class="copyright">
-            <li>&copy;2016 <a href="http://kyriakoskatzourakis.gr">kyriakoskatzourakis.gr</a> . All rights reserved.</li>
+            <li>&copy;2016 <a href="http://kyriakoskatzourakis.gr">kyriakoskatzourakis.gr</a>. All rights reserved.</li>
             <li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+            <li>Υλοποίηση: <a href="mailto:dchrysomalis@gmail.com">Δημήτρης Χρυσομάλλης</a></li>
         </ul>
 
     </div>
