Add meta description

--- a/ussak.kyriakoskatzourakis.gr/index.html
+++ b/ussak.kyriakoskatzourakis.gr/index.html
@@ -11,6 +11,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" type="image/png" href="/favicon.png" />
+    <meta name="description" content="Παρουσίαση της νέας ταινίας του Κ. Κατζουράκη USSAK και ανοιχτή πρόσκληση για την οικονομική υποστήριξη που θα επιτρέψει την επιτυχημένη παραγωγή της ταινίας" />
     <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
     <link rel="stylesheet" href="assets/css/main.css" />
     <link rel="stylesheet" href="assets/css/my.css" />
